src/main/zcode/parser/.antlr/ZCodeParser.py
# Generated from d://Projects//zcode-ppl//assignment3//assignment3-initial//src//main//zcode//parser//ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'number'", "'bool'", 
                     "'string'", "'return'", "'var'", "'dynamic'", "'func'", 
                     "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'not'", 
                     "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'!='", "'<-'", "'<'", "'<='", "'>'", "'>='", 
                     "'...'", "'=='", "'('", "')'", "'['", "']'", "','", 
                     "''\"'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NUMBER", "BOOL", "STRING", 
                      "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", "UNTIL", 
                      "BY", "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", 
                      "END", "NOT", "AND", "OR", "ADD", "SUB_AND_NEG", "MUL", 
                      "DIV", "MOD", "EQ", "NEQ", "ASSIGN", "LESS_THAN", 
                      "LESS_THAN_EQUAL", "GREATER_THAN", "GREATER_THAN_EQUAL", 
                      "STRING_CONCAT", "STRING_EQUAL", "LP", "RP", "LB", 
                      "RB", "CM", "INSIDE_QUOTE", "STRINGLIT", "IDENTIFIER", 
                      "ZNUM", "NEWLINE", "COMMENTS", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_variables = 3
    RULE_implicit_keyword_variable = 4
    RULE_defined_type_variable = 5
    RULE_int_lst = 6
    RULE_implicit_dynamic_variable = 7
    RULE_functions = 8
    RULE_param_lst = 9
    RULE_param = 10
    RULE_lst_stms = 11
    RULE_stm = 12
    RULE_declare_stm = 13
    RULE_continue_stm = 14
    RULE_if_stm = 15
    RULE_elif_stm = 16
    RULE_else_stm = 17
    RULE_for_stm = 18
    RULE_assign_stm = 19
    RULE_return_stm = 20
    RULE_break_stm = 21
    RULE_call_stm = 22
    RULE_arg_lst = 23
    RULE_block_stm = 24
    RULE_exp_list = 25
    RULE_exp0 = 26
    RULE_exp1 = 27
    RULE_exp2 = 28
    RULE_exp3 = 29
    RULE_exp4 = 30
    RULE_exp5 = 31
    RULE_exp6 = 32
    RULE_exp7 = 33
    RULE_exp8 = 34
    RULE_index = 35
    RULE_call_function = 36
    RULE_literal = 37
    RULE_array_lit = 38
    RULE_lst_literal = 39
    RULE_boolean_type = 40
    RULE_common_data_type = 41
    RULE_array_type = 42
    RULE_boolean_operator = 43
    RULE_string_operator = 44
    RULE_number_operator = 45
    RULE_ignored_newline = 46

    ruleNames =  [ "program", "decl_list", "decl", "variables", "implicit_keyword_variable", 
                   "defined_type_variable", "int_lst", "implicit_dynamic_variable", 
                   "functions", "param_lst", "param", "lst_stms", "stm", 
                   "declare_stm", "continue_stm", "if_stm", "elif_stm", 
                   "else_stm", "for_stm", "assign_stm", "return_stm", "break_stm", 
                   "call_stm", "arg_lst", "block_stm", "exp_list", "exp0", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
                   "exp8", "index", "call_function", "literal", "array_lit", 
                   "lst_literal", "boolean_type", "common_data_type", "array_type", 
                   "boolean_operator", "string_operator", "number_operator", 
                   "ignored_newline" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NUMBER=3
    BOOL=4
    STRING=5
    RETURN=6
    VAR=7
    DYNAMIC=8
    FUNC=9
    FOR=10
    UNTIL=11
    BY=12
    BREAK=13
    CONTINUE=14
    IF=15
    ELSE=16
    ELIF=17
    BEGIN=18
    END=19
    NOT=20
    AND=21
    OR=22
    ADD=23
    SUB_AND_NEG=24
    MUL=25
    DIV=26
    MOD=27
    EQ=28
    NEQ=29
    ASSIGN=30
    LESS_THAN=31
    LESS_THAN_EQUAL=32
    GREATER_THAN=33
    GREATER_THAN_EQUAL=34
    STRING_CONCAT=35
    STRING_EQUAL=36
    LP=37
    RP=38
    LB=39
    RB=40
    CM=41
    INSIDE_QUOTE=42
    STRINGLIT=43
    IDENTIFIER=44
    ZNUM=45
    NEWLINE=46
    COMMENTS=47
    WS=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 94
                self.match(ZCodeParser.NEWLINE)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.decl_list()
            self.state = 101
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl_list




    def decl_list(self):

        localctx = ZCodeParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.decl()
                self.state = 104
                self.decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ignored_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Ignored_newlineContext,0)


        def functions(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionsContext,0)


        def variables(self):
            return self.getTypedRuleContext(ZCodeParser.VariablesContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.state = 109
                self.functions()
                pass
            elif token in [3, 4, 5, 7, 8]:
                self.state = 110
                self.variables()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 113
            self.ignored_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def implicit_keyword_variable(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_keyword_variableContext,0)


        def defined_type_variable(self):
            return self.getTypedRuleContext(ZCodeParser.Defined_type_variableContext,0)


        def implicit_dynamic_variable(self):
            return self.getTypedRuleContext(ZCodeParser.Implicit_dynamic_variableContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variables




    def variables(self):

        localctx = ZCodeParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.implicit_keyword_variable()
                pass
            elif token in [3, 4, 5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.defined_type_variable()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.implicit_dynamic_variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_keyword_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def exp0(self):
            return self.getTypedRuleContext(ZCodeParser.Exp0Context,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_keyword_variable




    def implicit_keyword_variable(self):

        localctx = ZCodeParser.Implicit_keyword_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_implicit_keyword_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ZCodeParser.VAR)
            self.state = 121
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 122
            self.match(ZCodeParser.ASSIGN)
            self.state = 123
            self.exp0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Defined_type_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def common_data_type(self):
            return self.getTypedRuleContext(ZCodeParser.Common_data_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def exp0(self):
            return self.getTypedRuleContext(ZCodeParser.Exp0Context,0)


        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def int_lst(self):
            return self.getTypedRuleContext(ZCodeParser.Int_lstContext,0)


        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_defined_type_variable




    def defined_type_variable(self):

        localctx = ZCodeParser.Defined_type_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_defined_type_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.common_data_type()
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 126
                self.match(ZCodeParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 127
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 128
                self.match(ZCodeParser.LB)
                self.state = 129
                self.int_lst()
                self.state = 130
                self.match(ZCodeParser.RB)
                pass


            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 134
                self.match(ZCodeParser.ASSIGN)
                self.state = 135
                self.exp0()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZNUM(self):
            return self.getToken(ZCodeParser.ZNUM, 0)

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def int_lst(self):
            return self.getTypedRuleContext(ZCodeParser.Int_lstContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_int_lst




    def int_lst(self):

        localctx = ZCodeParser.Int_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_int_lst)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(ZCodeParser.ZNUM)
                self.state = 139
                self.match(ZCodeParser.CM)
                self.state = 140
                self.int_lst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(ZCodeParser.ZNUM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Implicit_dynamic_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def exp0(self):
            return self.getTypedRuleContext(ZCodeParser.Exp0Context,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicit_dynamic_variable




    def implicit_dynamic_variable(self):

        localctx = ZCodeParser.Implicit_dynamic_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_implicit_dynamic_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(ZCodeParser.DYNAMIC)
            self.state = 145
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 146
                self.match(ZCodeParser.ASSIGN)
                self.state = 147
                self.exp0()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def return_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmContext,0)


        def block_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmContext,0)


        def param_lst(self):
            return self.getTypedRuleContext(ZCodeParser.Param_lstContext,0)


        def ignored_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Ignored_newlineContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_functions




    def functions(self):

        localctx = ZCodeParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(ZCodeParser.FUNC)
            self.state = 151
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 152
            self.match(ZCodeParser.LP)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0):
                self.state = 153
                self.param_lst()


            self.state = 156
            self.match(ZCodeParser.RP)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 157
                    self.ignored_newline()


                self.state = 160
                self.return_stm()
                pass

            elif la_ == 2:
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 161
                    self.ignored_newline()


                self.state = 164
                self.block_stm()
                pass

            elif la_ == 3:
                self.state = 166
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 165
                    self.ignored_newline()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_lstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ZCodeParser.ParamContext,0)


        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def param_lst(self):
            return self.getTypedRuleContext(ZCodeParser.Param_lstContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_param_lst




    def param_lst(self):

        localctx = ZCodeParser.Param_lstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_lst)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.param()
                self.state = 171
                self.match(ZCodeParser.CM)
                self.state = 172
                self.param_lst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def common_data_type(self):
            return self.getTypedRuleContext(ZCodeParser.Common_data_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def int_lst(self):
            return self.getTypedRuleContext(ZCodeParser.Int_lstContext,0)


        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_param




    def param(self):

        localctx = ZCodeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.common_data_type()
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 178
                self.match(ZCodeParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 179
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 180
                self.match(ZCodeParser.LB)
                self.state = 181
                self.int_lst()
                self.state = 182
                self.match(ZCodeParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lst_stmsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stm(self):
            return self.getTypedRuleContext(ZCodeParser.StmContext,0)


        def ignored_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Ignored_newlineContext,0)


        def lst_stms(self):
            return self.getTypedRuleContext(ZCodeParser.Lst_stmsContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_lst_stms




    def lst_stms(self):

        localctx = ZCodeParser.Lst_stmsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_lst_stms)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.stm()
                self.state = 187
                self.ignored_newline()
                self.state = 188
                self.lst_stms()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.stm()
                self.state = 191
                self.ignored_newline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Declare_stmContext,0)


        def break_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Break_stmContext,0)


        def for_stm(self):
            return self.getTypedRuleContext(ZCodeParser.For_stmContext,0)


        def if_stm(self):
            return self.getTypedRuleContext(ZCodeParser.If_stmContext,0)


        def assign_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Assign_stmContext,0)


        def continue_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Continue_stmContext,0)


        def return_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Return_stmContext,0)


        def call_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Call_stmContext,0)


        def block_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Block_stmContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stm




    def stm(self):

        localctx = ZCodeParser.StmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stm)
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.declare_stm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.break_stm()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 197
                self.for_stm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 198
                self.if_stm()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 199
                self.assign_stm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 200
                self.continue_stm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 201
                self.return_stm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 202
                self.call_stm()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 203
                self.block_stm()
                pass

